--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,3 +25,21 @@ jobs:
 
       - name: Run ESLint
         run: npm run lint   
+
+  build-job:
+    runs-on: ubuntu-latest
+    needs: lint-job # รอให้ lint-job ผ่านก่อนถึงจะรัน build-job
+    steps:
+      - uses: actions/checkout@v5
+
+      - name: Set Nodejs version to 24.x
+        uses: actions/setup-node@v6
+        with:
+          node-version: '24.x'
+          cache: 'npm'
+      
+      - name: Install dependencies
+        run: npm ci   # clean install
+
+      - name: Run Build
+        run: npm run build           
