--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,3 +43,27 @@ jobs:
 
       - name: Run Build
         run: npm run build           
+
+  build-job-matrix:
+    runs-on: ubuntu-latest
+    needs: lint-job # รอให้ lint-job ผ่านก่อนถึงจะรัน build-job
+
+    strategy:
+      matrix:
+        #os: [ubuntu-latest, windows-latest, macos-latest]
+        node-version: [22.x, 24.x]
+
+    steps:
+      - uses: actions/checkout@v5
+
+      - name: Set Nodejs version to 24.x
+        uses: actions/setup-node@v6
+        with:
+          node-version: ${{ matrix['node-version'] }}
+          cache: 'npm'
+      
+      - name: Install dependencies
+        run: npm ci   # clean install
+
+      - name: Run Build
+        run: npm run build             
