--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,44 +29,44 @@ jobs:
       - name: Run ESLint
         run: npm run lint   
 
-  build-job:
-    runs-on: ubuntu-latest
-    needs: lint-job # รอให้ lint-job ผ่านก่อนถึงจะรัน build-job
-    steps:
-      - uses: actions/checkout@v5
+  # build-job:
+  #   runs-on: ubuntu-latest
+  #   needs: lint-job # รอให้ lint-job ผ่านก่อนถึงจะรัน build-job
+  #   steps:
+  #     - uses: actions/checkout@v5
 
-      - name: Set Nodejs version to 24.x
-        uses: actions/setup-node@v6
-        with:
-          node-version: '24.x'
-          cache: 'npm'
+  #     - name: Set Nodejs version to 24.x
+  #       uses: actions/setup-node@v6
+  #       with:
+  #         node-version: '24.x'
+  #         cache: 'npm'
       
-      - name: Install dependencies
-        run: npm ci   # clean install
+  #     - name: Install dependencies
+  #       run: npm ci   # clean install
 
-      - name: Run Build
-        run: npm run build           
+  #     - name: Run Build
+  #       run: npm run build           
 
-  build-job-matrix:
-    runs-on: ubuntu-latest
-    needs: lint-job # รอให้ lint-job ผ่านก่อนถึงจะรัน build-job
+  # build-job-matrix:
+  #   runs-on: ubuntu-latest
+  #   needs: lint-job # รอให้ lint-job ผ่านก่อนถึงจะรัน build-job
 
-    strategy:
-      matrix:
-        #os: [ubuntu-latest, windows-latest, macos-latest]
-        node-version: [22.x, 24.x]
+  #   strategy:
+  #     matrix:
+  #       #os: [ubuntu-latest, windows-latest, macos-latest]
+  #       node-version: [22.x, 24.x]
 
-    steps:
-      - uses: actions/checkout@v5
+  #   steps:
+  #     - uses: actions/checkout@v5
 
-      - name: Set Nodejs version to ${{ matrix.node-version}}   # เรียกใช้แบบที่ 1
-        uses: actions/setup-node@v6
-        with:
-          node-version: ${{ matrix['node-version'] }}  # เรียกใช้แบบที่ 2
-          cache: 'npm'
+  #     - name: Set Nodejs version to ${{ matrix.node-version}}   # เรียกใช้แบบที่ 1
+  #       uses: actions/setup-node@v6
+  #       with:
+  #         node-version: ${{ matrix['node-version'] }}  # เรียกใช้แบบที่ 2
+  #         cache: 'npm'
       
-      - name: Install dependencies
-        run: npm ci   # clean install
+  #     - name: Install dependencies
+  #       run: npm ci   # clean install
 
-      - name: Run Build
-        run: npm run build             
+  #     - name: Run Build
+  #       run: npm run build             
