--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -12,6 +12,26 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - run: echo "build-prod-job"
+      
+      - uses: actions/checkout@v5
+
+      - name: Set Nodejs version to 24.x
+        uses: actions/setup-node@v6
+        with:
+          node-version: '24.x'
+          cache: 'npm'
+      
+      - name: Install dependencies
+        run: npm ci   # clean install
+
+      - name: Rum Build production (create dist folder)
+        run: npm run build  
+
+      - name: Upload dist folder artifact
+        uses: actions/upload-artifact@v5
+        with:
+          name: dist-production
+          path: ./dist
   
   auto-deploy-job:
     runs-on: ubuntu-latest
