--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -31,10 +31,17 @@ jobs:
         uses: actions/upload-artifact@v5
         with:
           name: dist-production
-          path: ./dist
+          path: dist
   
   auto-deploy-job:
     runs-on: ubuntu-latest
+    needs: build-prod-job
     steps:
       - run: echo "auto-deploy-job"
+      - name: Download dist folder artifact
+        uses: actions/download-artifact@v6
+        with:
+          name: dist-production
+          path: dist
+      - run: ls dist
   
